[gd_scene load_steps=77 format=3 uid="uid://bf4od5ihf5y78"]

[ext_resource type="Script" uid="uid://2quft78r0yym" path="res://score_manager.gd" id="1_vublb"]
[ext_resource type="Texture2D" uid="uid://drbikn5ifimak" path="res://Sprites/UI/image.png" id="2_arc6k"]
[ext_resource type="Texture2D" uid="uid://cung8p46bqyev" path="res://Sprites/UI/spin_meter_white.png" id="3_uvms0"]
[ext_resource type="FontFile" uid="uid://hsdppwfineel" path="res://Fonts/SegoeUIBlack.ttf" id="4_bfd2b"]
[ext_resource type="Texture2D" uid="uid://brk5f6m6r7rwt" path="res://Sprites/UI/fishrank_background.png" id="5_1x5f8"]
[ext_resource type="Texture2D" uid="uid://b4nyue3pqwn7t" path="res://Sprites/UI/style_bar_progress.png" id="6_r4nh4"]
[ext_resource type="Texture2D" uid="uid://dluimmklciqsx" path="res://Sprites/UI/fishrank_foreground.png" id="7_lu126"]
[ext_resource type="AudioStream" uid="uid://ghurq6t565lm" path="res://Sounds/tricks/legendary/anime_punch.ogg" id="8_g3jka"]
[ext_resource type="AudioStream" uid="uid://bbeylxyv48l3f" path="res://Sounds/tricks/legendary/dive.ogg" id="9_ndf8x"]
[ext_resource type="AudioStream" uid="uid://c6wye6lhd2i0h" path="res://Sounds/tricks/legendary/oh_the_misery.ogg" id="10_8kiqt"]
[ext_resource type="AudioStream" uid="uid://dav807pihtf7q" path="res://Sounds/tricks/legendary/tony_hawk_trick_high.ogg" id="11_qaabf"]
[ext_resource type="AudioStream" uid="uid://dx0jgxdjkavku" path="res://Sounds/tricks/legendary/trumpet_charge.ogg" id="12_bbtbw"]
[ext_resource type="AudioStream" uid="uid://ks7fxvj61hh1" path="res://Sounds/tricks/legendary/goofy_ahh_horn.ogg" id="13_t84s7"]
[ext_resource type="AudioStream" uid="uid://da1bp5ww62b2d" path="res://Sounds/tricks/legendary/nerd_piano.ogg" id="14_lhekl"]
[ext_resource type="AudioStream" uid="uid://squlhkdekipc" path="res://Sounds/tricks/legendary/nerd_horn.ogg" id="15_43kdb"]
[ext_resource type="AudioStream" uid="uid://b3ae662odvxm2" path="res://Sounds/tricks/legendary/megalo.ogg" id="16_nlplh"]
[ext_resource type="AudioStream" uid="uid://qgecunu61mnb" path="res://Sounds/tricks/rare/divestart.ogg" id="17_w26ry"]
[ext_resource type="AudioStream" uid="uid://ccc5os2uty2jw" path="res://Sounds/tricks/rare/FL_hit_3.ogg" id="18_0mchs"]
[ext_resource type="AudioStream" uid="uid://b7dnvusks7vwv" path="res://Sounds/tricks/rare/FL_hit_4.ogg" id="19_xcqhv"]
[ext_resource type="AudioStream" uid="uid://cyltwf5dvuj5d" path="res://Sounds/tricks/rare/gambling.ogg" id="20_htoua"]
[ext_resource type="AudioStream" uid="uid://cl3mngag8w3pm" path="res://Sounds/tricks/rare/scratch2.ogg" id="21_pyh75"]
[ext_resource type="AudioStream" uid="uid://b7a85qb5hsgf2" path="res://Sounds/tricks/rare/scratch.ogg" id="22_1e1tp"]
[ext_resource type="AudioStream" uid="uid://cwbyge4sbo6ch" path="res://Sounds/tricks/rare/tony_hawk_trick_low.ogg" id="23_5wa8c"]
[ext_resource type="AudioStream" uid="uid://dmv3h5optlt8h" path="res://Sounds/tricks/rare/FL_hit_1.ogg" id="24_d382p"]
[ext_resource type="AudioStream" uid="uid://bitbhb4x5mkdo" path="res://Sounds/tricks/rare/FL_hit_2.ogg" id="25_6xbco"]
[ext_resource type="AudioStream" uid="uid://t3pogsslm5qa" path="res://Sounds/tricks/unused/anime_awkward.ogg" id="26_epg3a"]
[ext_resource type="AudioStream" uid="uid://d1mi70yn2fnt5" path="res://Sounds/tricks/unused/anime_bamboo.ogg" id="27_kspjd"]
[ext_resource type="AudioStream" uid="uid://crm0oesw1kf2k" path="res://Sounds/tricks/uncommon/boing2.ogg" id="28_vuovu"]
[ext_resource type="AudioStream" uid="uid://1vxcr8bhv5vo" path="res://Sounds/tricks/uncommon/boing3.ogg" id="29_oirct"]
[ext_resource type="AudioStream" uid="uid://c4w36j2josbff" path="res://Sounds/tricks/uncommon/boing4.ogg" id="30_ndoie"]
[ext_resource type="AudioStream" uid="uid://cablhoevdu3kb" path="res://Sounds/tricks/uncommon/boing.ogg" id="31_olouy"]
[ext_resource type="AudioStream" uid="uid://dmnhb4r8cl0vh" path="res://Sounds/tricks/uncommon/dancedance.ogg" id="32_lcyq0"]
[ext_resource type="AudioStream" uid="uid://cogiepb65bymm" path="res://Sounds/tricks/uncommon/peppino_taunt.ogg" id="33_c8ddp"]
[ext_resource type="AudioStream" uid="uid://dpc8ldjp7cyhc" path="res://Sounds/tricks/uncommon/roland_169_Ahh.ogg" id="34_xjb6t"]
[ext_resource type="AudioStream" uid="uid://dc73ttft37818" path="res://Sounds/tricks/trick1.ogg" id="35_p6ldc"]
[ext_resource type="AudioStream" uid="uid://dj271uuc65mds" path="res://Sounds/tricks/trick2.ogg" id="36_jkrp3"]
[ext_resource type="AudioStream" uid="uid://cu4adehe2o5ag" path="res://Sounds/tricks/trick3.ogg" id="37_vvwlm"]
[ext_resource type="AudioStream" uid="uid://b60yp7u0psrm4" path="res://Sounds/style_ranks/Damp1.ogg" id="38_diylm"]
[ext_resource type="AudioStream" uid="uid://cdp3t3xlbehkv" path="res://Sounds/style_ranks/Coastal1.ogg" id="39_735wu"]
[ext_resource type="AudioStream" uid="uid://cbjpwnpspesm" path="res://Sounds/style_ranks/Coastal2.ogg" id="40_uc5sa"]
[ext_resource type="AudioStream" uid="uid://cwlohls8twup5" path="res://Sounds/style_ranks/Coastal3.ogg" id="41_0yu4l"]
[ext_resource type="AudioStream" uid="uid://b6q6b7bhfq8k4" path="res://Sounds/style_ranks/Buoyant1.ogg" id="42_b5ogm"]
[ext_resource type="AudioStream" uid="uid://h3bt3361ccr3" path="res://Sounds/style_ranks/Buoyant2.ogg" id="43_o1l84"]
[ext_resource type="AudioStream" uid="uid://coxkk0earryte" path="res://Sounds/style_ranks/Buoyant3.ogg" id="44_l0gn3"]
[ext_resource type="AudioStream" uid="uid://dlx5xikvttv6w" path="res://Sounds/style_ranks/Aquatic1.ogg" id="45_clutx"]
[ext_resource type="AudioStream" uid="uid://cauq7j6qhobeu" path="res://Sounds/style_ranks/Aquatic2.ogg" id="46_pnijm"]
[ext_resource type="AudioStream" uid="uid://ly3iim25fpoi" path="res://Sounds/style_ranks/Aquatic3.ogg" id="47_s8mt1"]
[ext_resource type="AudioStream" uid="uid://celyytkn3la7w" path="res://Sounds/style_ranks/Splashing1.ogg" id="48_h0vjk"]
[ext_resource type="AudioStream" uid="uid://dwnsd8h7fk6ql" path="res://Sounds/style_ranks/Splashing2.ogg" id="49_tgapc"]
[ext_resource type="AudioStream" uid="uid://btch6uhcefhma" path="res://Sounds/style_ranks/Splashing3.ogg" id="50_ngpsh"]
[ext_resource type="AudioStream" uid="uid://42srebmeoj2i" path="res://Sounds/style_ranks/Phishics1.ogg" id="51_kp6l0"]
[ext_resource type="AudioStream" uid="uid://c1bkoyvw117e6" path="res://Sounds/style_ranks/Phishics2.ogg" id="52_v8oyf"]
[ext_resource type="AudioStream" uid="uid://d1mnm1fx20bk" path="res://Sounds/style_ranks/Phishics3.ogg" id="53_rlhha"]
[ext_resource type="AudioStream" uid="uid://cvo4j1k3x2blu" path="res://Sounds/style_ranks/PhishicSS1.ogg" id="54_nylqd"]
[ext_resource type="AudioStream" uid="uid://dnphskcuvtm1c" path="res://Sounds/style_ranks/PhishicSSS1.ogg" id="55_5su7l"]

[sub_resource type="LabelSettings" id="LabelSettings_7cib2"]
font = ExtResource("4_bfd2b")
font_size = 66
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_5htxl"]
font = ExtResource("4_bfd2b")
font_size = 35
font_color = Color(0, 0, 0, 0.509804)
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_2ysk2"]
font = ExtResource("4_bfd2b")
font_size = 35
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[sub_resource type="Animation" id="Animation_cmsud"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1935, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rank/score:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-122, 25)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rankBG/scoreBG:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-119, 22)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rank/StyleBarProgress:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-121, 28)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("rank/styleBarUnder:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-121, 28)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("rankBG/StyleBarProgressBG:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-118, 25)]
}

[sub_resource type="Animation" id="Animation_nl7uw"]
resource_name = "rank_down"
length = 0.500002
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.5),
"transitions": PackedFloat32Array(1.5, 0.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.5),
"transitions": PackedFloat32Array(1.5, 0.5, 1),
"update": 0,
"values": [Vector2(1935, 0), Vector2(1929, 26), Vector2(1935, 0)]
}

[sub_resource type="Animation" id="Animation_2aj7o"]
resource_name = "rank_up"
length = 0.266668
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.266667),
"transitions": PackedFloat32Array(0.5, 1.4, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.15, 1.15), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ql6v6"]
resource_name = "rank_up_PSSS"
length = 0.6
step = 0.0166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.216667, 0.6),
"transitions": PackedFloat32Array(0.5, 3, 3, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.35, 1.35), Vector2(1.35, 1.35), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rank/score:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.216667, 0.6),
"transitions": PackedFloat32Array(0.5, 3, 3, 1),
"update": 0,
"values": [Vector2(-122, 25), Vector2(-122, 45), Vector2(-122, 45), Vector2(-122, 25)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rankBG/scoreBG:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.216667, 0.6),
"transitions": PackedFloat32Array(0.5, 3, 3, 1),
"update": 0,
"values": [Vector2(-119, 22), Vector2(-111.842, 32.7621), Vector2(-111.842, 32.7621), Vector2(-119, 22)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rank/StyleBarProgress:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.216667, 0.6),
"transitions": PackedFloat32Array(0.5, 3, 3, 1),
"update": 0,
"values": [Vector2(-121, 28), Vector2(-121, 39), Vector2(-121, 39), Vector2(-121, 28)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("rank/styleBarUnder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.216667, 0.6),
"transitions": PackedFloat32Array(0.5, 3, 3, 1),
"update": 0,
"values": [Vector2(-121, 28), Vector2(-121, 39), Vector2(-121, 39), Vector2(-121, 28)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("rankBG/StyleBarProgressBG:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.116667, 0.216667, 0.6),
"transitions": PackedFloat32Array(0.5, 3, 3, 1),
"update": 0,
"values": [Vector2(-118, 25), Vector2(-114.709, 28.8887), Vector2(-114.709, 28.8887), Vector2(-118, 25)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ql6v6"]
_data = {
&"RESET": SubResource("Animation_cmsud"),
&"rank_down": SubResource("Animation_nl7uw"),
&"rank_up": SubResource("Animation_2aj7o"),
&"rank_up_PSSS": SubResource("Animation_ql6v6")
}

[sub_resource type="LabelSettings" id="LabelSettings_g3jka"]
font_size = 30
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_1l6ih"]
streams_count = 9
stream_0/stream = ExtResource("8_g3jka")
stream_1/stream = ExtResource("9_ndf8x")
stream_2/stream = ExtResource("10_8kiqt")
stream_3/stream = ExtResource("11_qaabf")
stream_4/stream = ExtResource("12_bbtbw")
stream_5/stream = ExtResource("13_t84s7")
stream_6/stream = ExtResource("14_lhekl")
stream_7/stream = ExtResource("15_43kdb")
stream_8/stream = ExtResource("16_nlplh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qywj1"]
streams_count = 9
stream_0/stream = ExtResource("17_w26ry")
stream_1/stream = ExtResource("18_0mchs")
stream_2/stream = ExtResource("19_xcqhv")
stream_3/stream = ExtResource("20_htoua")
stream_4/stream = ExtResource("21_pyh75")
stream_5/stream = ExtResource("22_1e1tp")
stream_6/stream = ExtResource("23_5wa8c")
stream_7/stream = ExtResource("24_d382p")
stream_8/stream = ExtResource("25_6xbco")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wvmip"]
streams_count = 9
stream_0/stream = ExtResource("26_epg3a")
stream_1/stream = ExtResource("27_kspjd")
stream_2/stream = ExtResource("28_vuovu")
stream_3/stream = ExtResource("29_oirct")
stream_4/stream = ExtResource("30_ndoie")
stream_5/stream = ExtResource("31_olouy")
stream_6/stream = ExtResource("32_lcyq0")
stream_7/stream = ExtResource("33_c8ddp")
stream_8/stream = ExtResource("34_xjb6t")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3tajq"]
streams_count = 6
stream_0/stream = ExtResource("24_d382p")
stream_1/stream = ExtResource("25_6xbco")
stream_2/stream = ExtResource("18_0mchs")
stream_3/stream = ExtResource("19_xcqhv")
stream_4/stream = ExtResource("33_c8ddp")
stream_5/stream = ExtResource("11_qaabf")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q2qio"]
streams_count = 1
stream_0/stream = ExtResource("38_diylm")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pb5r6"]
streams_count = 3
stream_0/stream = ExtResource("39_735wu")
stream_1/stream = ExtResource("40_uc5sa")
stream_2/stream = ExtResource("41_0yu4l")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_nuf03"]
streams_count = 3
stream_0/stream = ExtResource("42_b5ogm")
stream_1/stream = ExtResource("43_o1l84")
stream_2/stream = ExtResource("44_l0gn3")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gthnu"]
streams_count = 3
stream_0/stream = ExtResource("45_clutx")
stream_1/stream = ExtResource("46_pnijm")
stream_2/stream = ExtResource("47_s8mt1")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mbogq"]
streams_count = 3
stream_0/stream = ExtResource("48_h0vjk")
stream_1/stream = ExtResource("49_tgapc")
stream_2/stream = ExtResource("50_ngpsh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mqv3u"]
streams_count = 3
stream_0/stream = ExtResource("51_kp6l0")
stream_1/stream = ExtResource("52_v8oyf")
stream_2/stream = ExtResource("53_rlhha")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5v7dj"]
streams_count = 1
stream_0/stream = ExtResource("54_nylqd")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_o5qv3"]
streams_count = 1
stream_0/stream = ExtResource("55_5su7l")

[node name="ScoreManager" type="Node"]
script = ExtResource("1_vublb")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="splashScreen" type="TextureRect" parent="UI"]
visible = false
z_index = 10
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_arc6k")

[node name="MarginContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 28
theme_override_constants/margin_top = 10

[node name="airSpin" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 43.0
offset_top = 11.0
offset_right = 43.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2

[node name="spinMeter" type="TextureProgressBar" parent="UI/airSpin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(65, 65)
layout_mode = 2
offset_left = -1.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0
fill_mode = 4
radial_initial_angle = 20.0
nine_patch_stretch = true
texture_under = ExtResource("3_uvms0")
texture_progress = ExtResource("3_uvms0")

[node name="marginSpinMeter" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = -150
theme_override_constants/margin_bottom = 40

[node name="comboText" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -157.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 0

[node name="wallOfText" type="HBoxContainer" parent="UI/comboText"]
custom_minimum_size = Vector2(1920, 0)
layout_mode = 2
offset_left = -750.0
offset_top = -1973.0
offset_right = 750.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
alignment = 1

[node name="comboText" type="RichTextLabel" parent="UI/comboText/wallOfText"]
unique_name_in_owner = true
clip_contents = false
custom_minimum_size = Vector2(1600, 2000)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/default_color = Color(0, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 0, 1, 1)
theme_override_constants/outline_size = 12
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_outline_size = 1
theme_override_fonts/normal_font = ExtResource("4_bfd2b")
theme_override_font_sizes/normal_font_size = 40
text = "combo:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="comboScore" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="PointsXmult" type="HBoxContainer" parent="UI/comboScore"]
layout_mode = 2
offset_left = -750.0
offset_top = -50.0
offset_right = 750.0
offset_bottom = 40.0
size_flags_vertical = 4
alignment = 1

[node name="points" type="Label" parent="UI/comboScore/PointsXmult"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_direction = 3
layout_mode = 2
text = "Points"
label_settings = SubResource("LabelSettings_7cib2")
vertical_alignment = 2

[node name="X" type="Label" parent="UI/comboScore/PointsXmult"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = " X "
label_settings = SubResource("LabelSettings_7cib2")
horizontal_alignment = 1
vertical_alignment = 2

[node name="mult" type="Label" parent="UI/comboScore/PointsXmult"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
text = "Mult"
label_settings = SubResource("LabelSettings_7cib2")
vertical_alignment = 2

[node name="comboBarMargin" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_bottom = 21

[node name="comboBar" type="ColorRect" parent="UI/comboBarMargin"]
unique_name_in_owner = true
custom_minimum_size = Vector2(800, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="marginRank" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 15.0
offset_right = 15.0
grow_horizontal = 0

[node name="rankBG" type="Sprite2D" parent="UI/marginRank"]
unique_name_in_owner = true
show_behind_parent = true
texture_filter = 1
position = Vector2(-283, 142)
rotation = 0.261799
scale = Vector2(2.5, 2.5)
skew = -0.261799
texture = ExtResource("5_1x5f8")
vframes = 8
frame = 7

[node name="scoreBG" type="Label" parent="UI/marginRank/rankBG"]
unique_name_in_owner = true
show_behind_parent = true
offset_left = -119.0
offset_top = 22.0
offset_right = 121.0
offset_bottom = 77.0
text = "0000000000"
label_settings = SubResource("LabelSettings_5htxl")

[node name="StyleBarProgressBG" type="Sprite2D" parent="UI/marginRank/rankBG"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0.509804)
show_behind_parent = true
position = Vector2(-118, 25)
scale = Vector2(208, 1)
texture = ExtResource("6_r4nh4")
offset = Vector2(0.5, 0)

[node name="rank" type="Sprite2D" parent="UI/marginRank"]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(-283, 142)
rotation = 0.261799
scale = Vector2(2.5, 2.5)
skew = -0.261799
texture = ExtResource("7_lu126")
vframes = 8
frame = 7

[node name="score" type="Label" parent="UI/marginRank/rank"]
unique_name_in_owner = true
show_behind_parent = true
offset_left = -122.0
offset_top = 25.0
offset_right = 118.0
offset_bottom = 80.0
text = "0000000000"
label_settings = SubResource("LabelSettings_2ysk2")

[node name="styleBarUnder" type="Sprite2D" parent="UI/marginRank/rank"]
visible = false
modulate = Color(0, 0, 0, 1)
show_behind_parent = true
position = Vector2(-121, 28)
scale = Vector2(208, 1)
texture = ExtResource("6_r4nh4")
offset = Vector2(0.5, 0)

[node name="StyleBarProgress" type="Sprite2D" parent="UI/marginRank/rank"]
unique_name_in_owner = true
show_behind_parent = true
position = Vector2(-121, 28)
scale = Vector2(208, 1)
texture = ExtResource("6_r4nh4")
offset = Vector2(0.5, 0)

[node name="rankAnim" type="AnimationPlayer" parent="UI/marginRank"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_ql6v6")
}

[node name="debugLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 1509.0
offset_top = 355.0
offset_right = 1775.0
offset_bottom = 602.0
text = "debug info"
label_settings = SubResource("LabelSettings_g3jka")

[node name="legendary" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_1l6ih")
max_polyphony = 5
bus = &"tricks"

[node name="rare" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_qywj1")
max_polyphony = 5
bus = &"tricks"

[node name="uncommon" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_wvmip")
max_polyphony = 3
bus = &"tricks"

[node name="airSpin" type="AudioStreamPlayer" parent="."]
stream = ExtResource("35_p6ldc")
max_polyphony = 5
bus = &"tricks"

[node name="specialTrick1" type="AudioStreamPlayer" parent="."]
stream = ExtResource("36_jkrp3")
bus = &"tricks"

[node name="specialTrick2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("37_vvwlm")
bus = &"tricks"

[node name="randomTrick" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_3tajq")
volume_db = -60.0
bus = &"tricks"

[node name="damp" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_q2qio")
bus = &"rankUp"

[node name="coastal" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_pb5r6")
bus = &"rankUp"

[node name="buoyant" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_nuf03")
bus = &"rankUp"

[node name="aquatic" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_gthnu")
bus = &"rankUp"

[node name="splashing" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_mbogq")
bus = &"rankUp"

[node name="phishics" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_mqv3u")
bus = &"rankUp"

[node name="phishicss" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_5v7dj")
bus = &"rankUp"

[node name="phishicsss" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_o5qv3")
bus = &"rankUp"
